stretch link over the whole card, fix some issues
Make 'new' into an actual element instead of pseudo
prep heart icons for better animation, also remove unnecessary span
slightly change structure so that button is not in the <a> but a is lower in the card and stretches like overlay - caption is no longer flex but positioned absolute

--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -6,8 +6,7 @@
     border-radius: 15px;
     box-shadow: $shadow_2;
     overflow: hidden;
-    &.new::after {
-        content: "New";
+    & .new {
 		position: absolute;
 		top: 10px;
 		right: 20px;
@@ -19,6 +18,22 @@
 		border-radius: 3px;
         box-shadow: 2px 4px 5px #4a4a4a;
     }
+}
+
+.stretch-link {
+    position: absolute;
+    inset: 0;
+    & h4, p {
+        position: relative;
+        left: 15px;
+        top: 195px;
+    }
+}
+
+.heart-icon {
+    position: absolute;
+    right: 20px;
+    bottom: 40px;
 }
 
 /* Heart button */
