--- a/scss/style.scss
+++ b/scss/style.scss
@@ -215,6 +215,10 @@ h1, .shrik {
     padding-bottom: 15px;
 }
 
+.pad-25 {
+    padding: 25px;
+}
+
 .pad-30 {
     padding: 30px;
 }
